Fix footer width on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -153,4 +153,10 @@ input.searchFilter {
   input.searchFilter {
     width: 90%;
   }
+
+  .footer {
+    margin: 0.5rem;
+    padding: 0.5rem;
+    width: 90%;
+  }
 }
